Criando log e alterações de design

--- a/ControleHorasApp/App.config
+++ b/ControleHorasApp/App.config
@@ -9,6 +9,7 @@
   </startup>
   <appSettings>
     <add key="DataPath" value="D:\\tarefas.db" />
+	<add key="LogPath" value="D:\\log.txt" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <entityFramework>
