--- a/ControleHorasApp/App.config
+++ b/ControleHorasApp/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <appSettings>
-    <add key="DataPath" value="D:\\tarefas.db" />
-	<add key="LogPath" value="D:\\log.txt" />
+    <add key="DataPath" value="C:\\workplace\\tarefas.db" />
+	<add key="LogPath" value="C:\\workplace\\log.txt" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <entityFramework>
