--- a/ControleHorasApp/packages.config
+++ b/ControleHorasApp/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Dapper" version="2.0.123" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net472" />
@@ -27,12 +28,16 @@
   <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net472" />
-  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.1.4" targetFramework="net48" />
+  <package id="SQLitePCLRaw.core" version="2.1.4" targetFramework="net48" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.4" targetFramework="net48" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.1.4" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Data.SQLite" version="1.0.117.0" targetFramework="net472" />
-  <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net472" />
-  <package id="System.Data.SQLite.EF6" version="1.0.117.0" targetFramework="net472" />
-  <package id="System.Data.SQLite.Linq" version="1.0.117.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.117.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.EF6" version="1.0.117.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Linq" version="1.0.117.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
